@@ -1,3 +1,8 @@
+2001-08-11  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/proj.c: Generate an error message if +proj=latlong is used with
+	this program.  As per bugzilla bug 70. 
+
 2001-06-01  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* makefile.vc: emess.c directly linked into mainline programs.
